feat: Implementar mejoras críticas para Angular - GlobalExceptionHandler, DTOs estandarizados, validaciones, paginación y CORS seguro